# clinical-triage-ai-final

./: Dockerfile  README.md  baseline.py  inference.py  openenv.yaml  pyproject.toml  test_api.py
app/: api.py  env.py
server/: app.py
