[project]
name = "clinical-triage-ai"
version = "0.1.0"
description = "Clinical triage OpenEnv environment"
authors = [
    {name = "Nehal Vysyaraju"}
]

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openenv>=0.1.13"
]

[project.scripts]
server = "server.app:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"